Fixed clips drop down height
prevents overlap to allow for pausing of videos

--- a/css/home-page.css
+++ b/css/home-page.css
@@ -198,7 +198,6 @@
 
 #collapse-clips {
     text-align: center;
-    height: 100%;
     position: absolute;
     width: 100%;
     z-index: 1
